test/files/neg/sip23-uninitialized-3.check
sip23-uninitialized-3.scala:4: warning: variable f3 in object Test does nothing other than call itself recursively
  var f3: 1 = f3   // warning: recursive
              ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
